--- a/css/pages/history.css
+++ b/css/pages/history.css
@@ -94,8 +94,25 @@ main { display: flex; }
     font-size: 1.3em;
 }
 
+/* Estilos de la ventana de detalles de historial de resguardos */
+.root-details-safeguard {
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgba(0, 0, 0, 0.8);
+}
 
-
+.container-details-safeguard {
+    height: 90%;
+    width: 80%;
+    position: relative;
+    background: #FFFFFF;
+}
 
 
 
